--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel='stylesheet' href='/css/style.css'></link>
   </head>
   <body>
-    <div id='placeholder' style='width: 300px; height: 300px'></div>
+    <div id='placeholder'></div>
     <div id='heartrate_container'><span class='heart'>&hearts;</span><span id='heartrate'>0</span></div>
   </body>
 </html>
